# Openstack-cloud-api

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
.gitlab/issue_templates/: bug_template.md  feature_template.md
.gitlab/merge_request_templates/: merge_request_template.md
api_server/: exception_handler.py  main.py
application/: auth_service.py  keystone_service.py  project_service.py  user_service.py
application/auth/: response.py  service.py
application/floating_ip/: response.py  service.py
application/project/: response.py  service.py
application/security_group/: dto.py  response.py  service.py
application/user/: service.py
application/volume/: response.py  service.py
common/: auth_token_manager.py  compensating_transaction.py  context.py  envs.py
common/domain/: entity.py  enum.py
common/exception/: auth_exception.py  common_exception.py  exception_handler.py  floating_ip_exception.py  network_interface_exception.py  openstack_exception.py  project_exception.py  security_group_exception.py  server_exception.py  user_exception.py  volume_exception.py
common/infrastructure/: database.py  openstack_client.py
common/util/: auth_token_manager.py  background_task_runner.py  compensating_transaction.py  context.py  envs.py  system_token_manager.py
docs/: ddl.sql  erd.md  openapi.json  sequence_diagram_account.md  sequence_diagram_resource.md
domain/: domain.py  entity_status.py  enum.py  project.py  project_user.py  role.py  status.py  user.py
exception/: auth_exception.py  base.py  base_exception.py  base_exceptions.py  common_exception.py  exception_handler.py  floating_ip_exception.py  openstack_exception.py  project_exception.py  security_group_exception.py  user_exception.py  user_exceptions.py  volume_exception.py
infrastructure/: async_client.py  database.py  openstack_client.py  project_repository.py
router/: user_router.py
test/: conftest.py  project_e2e.py  project_unit.py
util/: auth_token_manager.py  background_task_runner.py
(+138 files in other folders)
