[project]
name = "openstack-cloud-api"
version = "0.1.0"
description = ""
authors = [
    { name = "Woody", email = "ju.jeong@gabia.com" },
    { name = "Ted", email = "my.koh@gabia.com" }
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "aiomysql (>=0.2.0,<0.3.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "testcontainers (>=4.9.2,<5.0.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "cryptography (>=44.0.2,<45.0.0)",
    "async-property (>=0.2.2,<0.3.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-jose[cryptography] (>=3.4.0,<4.0.0)",
    "backoff (>=2.2.1,<3.0.0)",
    "pytest-mock (>=3.14.0,<4.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false
